# wembed-core

./: .flake8  .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
__future__/: models
scripts/: cleanup.cmd  cleanup_v2.cmd  ctx-gen.cmd  format.cmd  patch.cmd
src/wembed_core/: __init__.py  config.py  database.py  embedding.py  enums.py  ollama_client.py
src/wembed_core/chunker/: __init__.py  ast_chunker.py  dependency_analyzer.py  git_analyzer.py  git_metadata_extractor.py
src/wembed_core/constants/: __init__.py  headers.py  ignore_ext.py  ignore_parts.py  indexing_markers.py  md_xref.py  stdlib_modules.py
src/wembed_core/controllers/: __init__.py  code_chunker_code_chunk_controller.py  code_chunker_dependency_node_controller.py  code_chunker_function_call_controller.py  code_chunker_git_branch_controller.py  code_chunker_git_commit_controller.py  code_chunker_git_file_info_controller.py  code_chunker_import_statement_controller.py  code_chunker_usage_node_controller.py  dl_chunk_controller.py  dl_document_controller.py  dl_input_controller.py  indexed_file_controller.py  indexed_file_line_controller.py  indexed_repo_controller.py  indexed_vault_controller.py  indexing_result_controller.py  scan_result_controller.py
src/wembed_core/file_scanner/: __init__.py  dot_scanignore.py  list_builder.py  tmp_repo_manager.py  utils.py
src/wembed_core/models/: __init__.py  code_chunker_code_chunk.py  code_chunker_dependency_node.py  code_chunker_function_call.py  code_chunker_git_branch.py  code_chunker_git_commit.py  code_chunker_git_file_info.py  code_chunker_import_statement.py  code_chunker_usage_node.py  dl_chunks.py  dl_documents.py  dl_inputs.py  dl_types.py  file_record.py  indexed_file_lines.py  indexed_files.py  indexed_obsidian_vaults.py  indexed_repos.py  indexing_results.py  scan_result.py  tts.py
src/wembed_core/models/code_chunker/: __init__.py  code_chunker_code_chunk.py  code_chunker_dependency_node.py  code_chunker_function_call.py  code_chunker_git_branch.py  code_chunker_git_commit.py  code_chunker_git_file_info.py  code_chunker_import_statement.py  code_chunker_usage_node.py
src/wembed_core/schemas/: __init__.py  code_chunker.py  code_chunker_schemas.py  dl_doc_schemas.py  dl_schemas.py  file_schemas.py  indexed_file_line_schema.py  indexed_file_schema.py  indexed_obsidian_vault_schema.py  indexed_repo_schema.py  indexing_result_schemas.py  indexing_schemas.py  scan_result_schemas.py  tts_schemas.py
src/wembed_core/services/: __init__.py  code_chunker_service.py  dl_converter_service.py  file_scanning_service.py  tts_service.py
src/wembed_core/utils/: file_utils.py
tests/: test_code_chunker_dependency_types.py  test_config_models.py  test_constants.py  test_embedding_service.py  test_file_schemas.py  test_host_file_record.py  test_ollama_client.py  test_scan_result_record.py  test_scan_result_schema.py
tests/test_controllers/: test_code_chunker_controllers.py  test_dl_docs_controllers.py  test_indexing_controllers.py
tests/test_db_models/: test_code_chunker_models.py  test_dl_models.py  test_indexed_file_lines.py  test_indexed_files_model.py  test_indexed_obsidian_vault_model.py  test_indexed_repos_model.py  test_indexing_results_model.py
tests/test_schemas/: test_code_chunker_schemas.py  test_dl_schemas.py  test_indexed_file_schemas.py  test_indexed_obsidian_vault_schema.py  test_indexed_repo_schema.py  test_indexing_results_schemas.py
(+19 files in other folders)
